main/default/objects/pharos__EventAction__c/pharos__EventAction__c.object-meta.xml
<CustomObject>
    <label>Event Action</label>
    <nameField>
        <displayFormat>EA-{0000000}</displayFormat>
        <label>Event Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>