main/default/objects/pharos__EventAction__c/fields/pharos__Action__c.field-meta.xml
<CustomField>
    <fullName>pharos__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>pharos__Action__c</referenceTo>
    <relationshipLabel>Event Actions</relationshipLabel>
    <relationshipName>EventActions</relationshipName>
    <type>Lookup</type>
</CustomField>