main/default/objects/pharos__EventAction__c/fields/pharos__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Action_Type__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>