main/default/objects/pharos__EventAction__c/fields/pharos__Contents__c.field-meta.xml
<CustomField>
    <fullName>pharos__Contents__c</fullName>
    <label>Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>