main/default/objects/pharos__EventAction__c/fields/pharos__Delivered_to__c.field-meta.xml
<CustomField>
    <fullName>pharos__Delivered_to__c</fullName>
    <label>Delivered to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>