main/default/objects/pharos__EventAction__c/fields/pharos__Event__c.field-meta.xml
<CustomField>
    <fullName>pharos__Event__c</fullName>
    <label>Event</label>
    <referenceTo>pharos__Event__c</referenceTo>
    <relationshipLabel>Event Actions</relationshipLabel>
    <relationshipName>EventActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>