main/default/objects/pharos__EventAction__c/fields/pharos__Executed_On__c.field-meta.xml
<CustomField>
    <fullName>pharos__Executed_On__c</fullName>
    <label>Executed On</label>
    <type>DateTime</type>
</CustomField>