main/default/objects/pharos__EventAction__c/fields/pharos__Response__c.field-meta.xml
<CustomField>
    <fullName>pharos__Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>